# ipsum

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  INTERFACE.md  LICENSE  README.md  RESEARCH.md  RESEARCH_LOG.md  RESULTS.md  pyproject.toml
data/: README.md  profile_rtptorrent.py  rtptorrent.py
experiments/: artifacts.py  baseline_weekly_retrain.py  card_a_admission.py  card_b_eviction.py  card_d_coverage.py  card_d_skew_sweep.py  compounding.py  compounding_rtptorrent.py  instrument_self_check.py
frontend/: README.md  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  data.ts  types.ts
frontend/src/components/: AbstractionInspector.tsx  CompoundingChart.tsx  RunsBrowser.tsx  common.tsx
frontend/src/fixtures/: sampleRun.ts
research/: 00-synthesis.md  01-maml.md  02-hierarchical-bayes.md  03-neural-processes.md  04-hypernetworks.md  05-dreamcoder.md  06-voyager.md  07-ewc.md  08-alphazero.md  09-test-selection.md  10-datasets.md  ipsum-design.md  ipsum-related-work.md  ramchandran-program.md
src/ipsum/: __init__.py  abstractions.py  consolidation.py  credit.py  prior.py  synth.py
tests/: test_abstractions.py  test_artifacts.py  test_baseline_weekly_retrain.py  test_card_b_eviction.py  test_card_d_coverage.py  test_compounding.py  test_rtptorrent.py  test_smoke.py  test_synth.py
